--- a/App_Folder/css/xue-content_201311.css
+++ b/App_Folder/css/xue-content_201311.css
@@ -108,7 +108,38 @@ a.btn_gray:hover{
 	background-color: #dc454c; 
 	color:#fff;
 	text-decoration:none;
-	border:1px solid #aa0e15}	
+	border:1px solid #aa0e15}
+.btn_gray-02{
+	display:inline-block;
+	padding:5px 10px;
+	margin:0 10px;
+	-webkit-border-radius: 8px;
+	-moz-border-radius: 8px;
+	-o-border-radius: 8px;
+	-ms-border-radius: 8px;
+	border-radius: 8px;
+	background: -webkit-gradient(linear, left top, right top, from(#c3c2c2), to(#898888));
+	background: -webkit-linear-gradient(top, #c3c2c2, #898888);
+	background: -moz-linear-gradient(top, #c3c2c2, #898888);
+	background: -o-linear-gradient(top, #c3c2c2, #898888);
+	background: -ms-linear-gradient(top, #c3c2c2, #898888);
+	background: linear-gradient(top, #c3c2c2, #898888);
+	background-color: #c3c2c2;
+	color:#fff;
+	text-decoration:none;
+	border:1px solid #898888;
+	cursor:pointer}
+.btn_gray-02:hover{
+	background: -webkit-gradient(linear, left top, right top, from(#dc454c), to(#aa0e15));
+	background: -webkit-linear-gradient(top, #dc454c, #aa0e15);
+	background: -moz-linear-gradient(top, #dc454c, #aa0e15);
+	background: -o-linear-gradient(top, #dc454c, #aa0e15);
+	background: -ms-linear-gradient(top, #dc454c, #aa0e15);
+	background: linear-gradient(top, #dc454c, #aa0e15);
+	background-color: #dc454c; 
+	color:#fff;
+	text-decoration:none;
+	border:1px solid #aa0e15}		
 
 				
 
@@ -205,7 +236,9 @@ a.btn_gray:hover{
 	box-shadow: 0 0 10px #EDB93D}
 .w15{ width:15px}
 .w60{ width:60px}
+.w100{ width:100px}
 .w160{ width:160px}
+.w200{ width:200px}
 .w350{ width:350px}
 .w420{ width:490px}
 
@@ -241,6 +274,8 @@ a.btn_gray:hover{
 
 #box_search, #box_add, #box_view, #box_edit{ display: none; width:650px}
 #box_search{font-size:0.813em; line-height:22px}
+
+.down_btn{ display:block; text-align:center}
 
 /*頁碼*/
 .sabrosus{ float:left; padding: 3px; margin:10px 3px; font-size:0.813em; text-align: center}
