--- a/App_Folder/css/xue-content_201311.css
+++ b/App_Folder/css/xue-content_201311.css
@@ -145,14 +145,15 @@ a.btn_gray:hover{
 /* 2. 內頁板型  
 -----------------------------------------------------------------------------------------------
 ===============================================================================================*/
-.main_content{
+.main_content, .main_content-02{
 	display:block;
-	width:93%;
-	width:96% !important;
 	min-height:510px;
-	margin:30px auto;
 	background:url(../images/bg_content-logo.png) right bottom no-repeat}
-.main_content h3{ font-size:1em; line-height:25px; color:#66542a; text-shadow: 1px 1px 0 #FFF}
+.main_content{width:93%; width:96% !important; margin:30px auto;}
+.main_content-02{ width:100%; margin:0 auto}		
+.main_content h3, .main_content-02 h3{ font-size:1em; line-height:25px; color:#66542a; text-shadow: 1px 1px 0 #FFF}
+.subpage, .topbox{ width:93%; width:96% !important; margin:0 auto}
+
 .box_output{display:block; border:1px solid #CECCCC; height:90px; margin-top:15px}
 .box_output h4{ text-align:center; letter-spacing:1px; padding-top:35px}	
 .btn_login{
@@ -182,7 +183,7 @@ a.btn_gray:hover{
 	letter-spacing:2px}	
 .btn_send:hover{ background:url(../images/btn_gray.png) 0 -23px no-repeat}
 
-.table-bg, .table-bg-02{
+.table-bg, .table-bg-02, .table-bg-03{
 	display:block;
 	/*min-height:1500px;*/
 	font-size:0.813em; 
@@ -195,11 +196,12 @@ a.btn_gray:hover{
 	-o-box-shadow: 0 0 10px #e2e2e2;
 	-ms-box-shadow: 0 0 10px #e2e2e2;
 	box-shadow: 0 0 10px #e2e2e2}
-.table-bg{margin-top:120px/*20px*/;}	
+.table-bg{margin-top:120px/*20px*/;}
+.table-bg-03{ margin-top:80px}	
 .mytable_search, .mytable_search-02, .mytable_list, .mytable_list-02, .mytable_info, .mytable_orderlist, .mytable_addprod{margin-bottom:20px}
 .mytable_list, .mytable_list-02, .mytable_info, .mytable_orderlist{ border-collapse: separate; border-spacing: 1px}
 .mytable_info{font-size:0.813em; line-height:22px}
-.table-bg .mytable_info{font-size:1em; line-height:22px}
+.table-bg .mytable_info, .table-bg-03 .mytable_info{font-size:1em; line-height:22px}
 .mytable_search th, .mytable_search-02 th, .mytable_list th, .mytable_list-02 th, .mytable_info th, .mytable_orderlist th{
 	text-shadow: 1px 1px 0 #F2E4C2;
 	vertical-align:middle; 
@@ -288,12 +290,21 @@ a.btn_gray:hover{
 .page_title{
 	display:block;
 	position: fixed;
-	z-index:8010;
+	padding-top:20px; 
 	top:48px;
+	z-index:8010;
 	width:97%/*93.5%*/; 
 	height:50px; 
-	background: url(../images/bg_content.png);
-	padding-top:20px}
+	background: url(../images/bg_content.png)}
+.page_title-02{
+	display:block;
+	position:fixed;
+	top:0;
+	z-index:8010;
+	width:100%/*93.5%*/; 
+	height:80px; 
+	background: url(../images/bg_content.png)}	
+
 .lay-left, .lay-left-02{
 	display:block;
 	float:left;
@@ -399,3 +410,4 @@ a.btn_gray:hover{
 .tabs li.active { background: #fff; border-bottom: 1px solid #fff}
 .tabs li.active a:hover{ background: #fff}
 #tab2{ display:block; min-height:300px}
+.top_line{display:block; width:100%; height:5px; background:#AFAFAE/*#DBDAD8*/; cursor: row-resize; margin-bottom:20px}
