Lightbox 顯示位置調整 #20140225

--- a/App_Folder/css/jquery.fancybox.css
+++ b/App_Folder/css/jquery.fancybox.css
@@ -19,7 +19,9 @@
 
 .fancybox-wrap {
 	position: absolute;
-	top: 0;
+	/*top: 0;*/
+	top:100px;
+	top:100px !important;
 	left: 0;
 	z-index: 8020;
 }
